test/snl/formats/verilog/benchmarks/errors/error7.v
/*
  Error: wire collision
*/

module test();
  wire n0;
  wire n0;
endmodule